<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/et_email"
        android:textAllCaps="true"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/login"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/_35sdp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/exo_2"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimaryDark"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/exo_2"
        android:paddingStart="@dimen/_10sdp"
        android:layout_below="@+id/et_email"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_background"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_login"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/login"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/exo_2_bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:layout_below="@+id/et_password"
        android:layout_height="@dimen/_35sdp"/>



</RelativeLayout>